fix: add gap in pricing cards

--- a/styles/mobiles.css
+++ b/styles/mobiles.css
@@ -192,6 +192,7 @@
 
     .pricing-container {
         grid-template-columns: 1fr;
+        gap: 2em;
     }
 
     /* FOOTER DEGRADATION */
